<resources>
    <string name="app_name">Camello</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_fragment_title">Registro</string>
    <string name="title_dashboard">Historial</string>

    <string name="devices_fragment_title">Equipos</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>


    <!-- Error strings -->
    <string name="invalid_email">Usuario incorrecto</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="device_already_taken">Este dispositivo esta siendo usado por otra persona.</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click para regresar a la app
    </string>

    <string name="insufficient_permissions">Permisos insuficientes.</string>
    <string name="permission_rationale">Permisos de localización es necesario</string>
    <string name="permission_denied_explanation">Permiso denegado es necesario para el funcionamiento de esta app</string>
    <string name="settings">Settings</string>

    <!-- UI string values -->
    <string name="empty_notifications_message">No hay notificaciones nuevas en este momento.</string>
    <string name="notifications_fragment_title">Notificaciones</string>
    <string name="privacy_policy_fragment_title">Política de privacidad</string>
    <string name="user_manual_fragment_title">Manual de usuario</string>
    <string name="permissions_fragment_title">Permisos</string>
    <string name="parameter_missing_error">Parámetro requerido</string>
    <string name="login_progress_dialog_message">Autenticando usuario</string>
    <string name="home_text_view_start_message">Bienvenido</string>
    <string name="home_button_start_message">INICIAR</string>
    <string name="home_text_view_finish_message">Trabajando</string>
    <string name="home_button_finish_message">FINALIZAR</string>
    <string name="title_error_connection">Error de conexión</string>
    <string name="message_error_connection">Al parecer no hay conexión a Internet.</string>
    <string name="message_example">A través de este medio se comunica que el día viernes de esta semana se suspenden las actividades por motivos de la emeregencia sanitaria.</string>
    <string name="notification_ok_button">Entendido</string>
    <string name="title_example">Comunicado</string>
    <string name="title_label">Título: </string>
    <string name="message_label">Mensaje: </string>
    <string name="title_add_device_fragment">Agregar Dispositivo</string>
    <string name="text_status_active">Activo</string>
    <string name="label_device_status">Estado: </string>
    <string name="label_imei">IMEI: </string>
    <string name="label_device_model">Modelo: </string>
    <string name="text_status_inactive">Inactivo</string>
    <string name="label_notification_title">Título:</string>
    <string name="label_notification_sent_date">Fecha de envío:</string>
    <string name="tools_title_example">Lorem Ipsum</string>
    <string name="tools_date_example">06/04/2020</string>
    <string name="notification_exit_title">Salió de su zona de trabajo</string>
    <string name="dialog_permission_title">Solicitar Permiso</string>
    <string name="start_date_label">Fecha inicio</string>
    <string name="end_date_label">Fecha fin</string>
    <string name="permission_positive_button">Ok</string>
    <string name="permission_negative_button">Cancelar</string>
    <string name="device_already_taken_title">Ah ocurrido un error</string>
    <string name="invalid_credentials_title">Autenticación fallida</string>
    <string name="invalid_credentials">El usuario y contraseña \nproporcionados no son correctos.</string>
    <string name="password_hint">Contraseña</string>
    <string name="email_hint">Email</string>
    <string name="welcome">Bienvenido</string>
    <string name="init_session_label">Iniciar sesión</string>
    <string name="access_label">Acceder</string>
    <string name="logo_alt">logo</string>
    <string name="login_button_alt">Acceder</string>

    <string name="not_correct_location_title">No es posible</string>
    <string name="not_correct_location_message">No te encuentras en una zona de trabajo.</string>

    <!-- Notification settings -->
    <string name="notification_channel_name">Mensajes</string>
    <string name="notification_channel_description">Mensajes de la empresa</string>

    <string name="location_channel_name">Notificaciones</string>
    <string name="location_channel_description">Notificaciones de tu locaclización</string>

    <string name="no_internet_connection_title">Error de red</string>
    <string name="no_internet_connection">Al parecer no tienes acceso a internet.</string>
    <string name="available_device">Habilitado</string>
    <string name="not_available_device">Deshabilitado</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="sign_out_label">Cerrar Sesión</string>


    <!-- Diccionario de errores del servidor -->
    <string name="error">Error</string>
    <string name="unknown_error">Algo salió mal</string>
    <string name="processing">Procesando</string>
    <string name="success">Completado</string>
    <string name="no_permissions_to_show">No hay permisos que mostrar</string>
    <string name="process_not_init_default_title_message">Proceso no inciado</string>
    <string name="process_successful_default_title_message">Completado</string>
    <string name="process_processing_default_title_message">Procesando</string>
    <string name="process_failed_default_title_message">Error</string>
    <string name="process_canceled_default_title_message">Cancelado</string>
    <string name="process_not_init_default_message">Proceso no inciado</string>
    <string name="process_successful_default_tmessage">Proceso completado exitosamente</string>
    <string name="process_processing_default_message">Proceso en curso</string>
    <string name="process_failed_default_message">Proceso fallido</string>
    <string name="process_canceled_default_message">El proceso ha sido cancelado</string>
    <string name="entrance_has_been_registered">Se registró\nsu entrada</string>
    <string name="exit_has_been_registered">Se registró\nsu salida</string>
    <string name="device_name">Nombre del equipo</string>
    <string name="model">Modelo</string>
    <string name="comment">Comentario</string>
    <string name="recover_password_ok">ENVIAR</string>
    <string name="failed_recover_password_title">Error</string>
    <string name="failed_recover_password_message">No se ha encontrado un usuario con ese correo.</string>
    <string name="unknown_error_message">Ah ocurrido un error</string>
    <string name="recover_password_process_sucesful_title">Completado</string>
    <string name="recover_password_process_sucesful_message">Se ha enviado un mensaje al correo electrónico que proporcionaste.</string>
    <string name="recover_password_label">Recuperar contraseña</string>
    <string name="enter_email">Ingrese su correo electrónico</string>
    <string name="recover_password_target_mail">Correo*</string>
    <string name="refresh_button">Sincronizar</string>
    <string name="side_menu_button">Abrir menú lateral</string>
    <string name="camello_number">+593 986643052</string>
    <string name="camello_mail">soporte@camello.com.ec</string>
    <string name="number_copied_to_clipboard">Número copiado al portapapeles</string>
    <string name="send_message_trough">Enviar mensaje a través de</string>
    <string name="send_mail">Enviar correo</string>
    <string name="request_permission_date_error_title">Error al solicitar el permiso</string>
    <string name="request_permission_date_error">La fechas ingresadas no son válidas.</string>
    <string name="delete_permission_title">Eliminar Permiso</string>
    <string name="delte_permission_message">¿Está seguro que desea eliminar el permiso?</string>


    <!-- Diccionario de errores del servidor -->
    <string name="server_error_600">Fuera de horario laboral.</string>
    <string name="server_error_601">No se pudo sincronizar la asistencia correctamente.</string>
    <string name="server_error_400">Email o contraseña incorrectos.</string>
    <string name="server_error_300">Usuario no autenticado.</string>
    <string name="server_error_301">Usuario no autorizado.</string>
    <string name="server_error_302">Refresh token inválido.</string>
    <string name="server_error_303">Refresh token expirado, inicie sesion nuevamente.</string>
    <string name="server_error_304">Se debe especificar el token de acceso.</string>
    <string name="server_error_501">Token invalido.</string>
    <string name="server_error_502">Token expirado.</string>
    <string name="server_error_404">Recurso no encontrado.</string>
    <string name="server_error_403">Campos invalidos.</string>
    <string name="server_error_700">No se puede registrar desde el dispositivo de otro empleado.</string>
    <string name="server_error_701">Dispositivo deshabilitado, contacte al administrador de su empresa.</string>
    <string name="server_error_801">Llave expirada.</string>
    <string name="server_error_800">Llave invalida.</string>
    <string name="server_error_802">Archivo con extension inválida.</string>
    <string name="server_error_803">No se pudo sincronizar correctamente.</string>
    <string name="server_error_805">No se puedo completar la accion. Contáctese con soporte.</string>
    <string name="server_error_806">Servicio deshabilitado.</string>
    <string name="server_error_804">No se encontro el recurso.</string>
    <string name="server_error_900">El código del dispositivo no esta registrado.</string>
    <string name="synced">Sincronizado</string>
    <string name="disclosure_title">Uso de tu localización</string>
    <string name="disclosure_explanation">Camello accede a tu ubicación en segundo plano para poder comprobar si te encuentras o no en una zona de trabajo, y de acuerdo a eso poder registrar un periodo.\n\nUna vez que has iniciado un periodo, Camello accede a tu ubicación en segundo plano incluso si la aplicación es cerrada o no está siendo usada.</string>
    <string name="disclosure_positive_button">Siguiente</string>
    <string name="disclosure_image_alt">imagen de referencia</string>
    <string name="help_button_alt">ayuda</string>


</resources>
