<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_permission_title"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        style="@style/titles"></TextView>

    <Spinner
        android:id="@+id/spnPermissionType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        />

    <EditText
        android:id="@+id/txtStartDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date_label"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:background="@null"
        android:fontFamily="@font/opensans_light"
        android:textSize="17dp"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true">
    </EditText>

    <EditText
        android:id="@+id/txtEndDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date_label"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:background="@null"
        android:fontFamily="@font/opensans_light"
        android:textSize="17dp"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true">
    </EditText>


</LinearLayout>